--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,1 @@
-# Julia
-*.jl.cov
-*.jl.*.cov
-*.jl.mem
-Manifest.toml
-
-# Build artifacts
-/docs/build/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Generated figures
-*.png
+*.pyc
